--- a/src/index.css
+++ b/src/index.css
@@ -208,3 +208,9 @@ ol {
   height: 70px;
   border-radius: 50%;
 }
+.username {
+  color: whitesmoke;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: large;
+}
